<?xml version="1.0"?>
<package format="2">
  <name>glog</name>
  <version>0.4.1</version>
  <description>glog fork</description>

  <author>Manuel Werlberger</author>
  <maintainer email="code@werlberger.org">Manuel Werlberger</maintainer>
  <license>See original package</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>gflags</depend>
</package>
